--- a/static/notifications/sass/components/_notifications.sass
+++ b/static/notifications/sass/components/_notifications.sass
@@ -43,3 +43,8 @@
     hr
       @include hr-el(0, 0, 100%, 0.5px, $color10)
       // @include hr-el(0.3rem, 0.3rem, 100%, 0.5px, $color10)
+
+@media screen and (max-width:730px)
+  main.main-list_post
+    .container-left
+      display: none
