responsive page messagerie

--- a/templates/friends/mynetwork.html
+++ b/templates/friends/mynetwork.html
@@ -14,7 +14,7 @@
 {% endblock style %}
 
 <!-- Navbar -->
-{% block navbar %} {% include 'components/navbar2.html' %} {% endblock navbar %}
+{% block navbar %} {% include 'home/components/navbar2.html' %} {% endblock navbar %}
 
 
 {% block content %}
