--- a/static/chat/css/style.css
+++ b/static/chat/css/style.css
@@ -20,7 +20,7 @@ a:visited {
   color: #f1f1f1;
 }
 
-.flex-center, main.messagerie .container-main form#form-chat button#chat-btn-send-msg, .container-main .new-add-post {
+.flex-center, .container-main form#form-chat button#chat-btn-send-msg, .my-friends-info {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -31,97 +31,6 @@ a:visited {
   flex-direction: column;
 }
 
-main.main-list_post {
-  width: 100%;
-  margin-top: 5.5rem;
-  display: flex;
-  justify-content: space-between;
-  gap: 2rem;
-  position: relative;
-}
-
-.container-left {
-  width: 20%;
-  height: 325px;
-  box-shadow: 0 2px 3px 0 #0000001a;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  background-color: #34495e;
-  position: sticky;
-  left: 0;
-  top: 87px;
-}
-
-.container-main {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  gap: 0.8rem;
-}
-.container-main .new-add-post {
-  width: 100%;
-  box-shadow: 0 2px 3px 0 #0000001a;
-  border-radius: 8px;
-  background-color: #34495e;
-  margin-bottom: 0.7rem;
-  padding: 0.8rem;
-  flex-direction: column;
-}
-.container-main .container-all-post {
-  width: 100%;
-  padding: 0.5rem 0 0.5rem;
-  box-shadow: 0 2px 3px 0 #0000001a;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  background-color: #34495e;
-  position: relative;
-}
-
-.container-right {
-  width: 25%;
-  border-radius: 8px;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  position: sticky;
-  right: 0;
-  top: 87px;
-}
-
-@media screen and (max-width: 1030px) {
-  .container-left {
-    width: 25%;
-  }
-}
-@media screen and (max-width: 890px) {
-  main.main-list_post .container-right {
-    display: none;
-  }
-  main.main-list_post .container-main {
-    width: 65%;
-  }
-  main.main-list_post .container-left {
-    width: 35%;
-  }
-}
-@media screen and (max-width: 730px) {
-  main.main-list_post {
-    flex-direction: column;
-    align-items: center;
-  }
-  main.main-list_post .container-left {
-    width: 100%;
-    position: relative;
-    left: 0;
-    top: 0;
-  }
-  main.main-list_post .container-main {
-    width: 100%;
-  }
-}
 .container-left .left-sub-container {
   width: 100%;
   display: flex;
@@ -265,6 +174,33 @@ main.messagerie {
   gap: 2rem;
   position: relative;
 }
+main.messagerie .container-left, main.messagerie .container-left-chat {
+  box-shadow: 0 2px 3px 0 #0000001a;
+  border-radius: 8px;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+  flex-direction: column;
+  background-color: #34495e;
+  position: sticky;
+  left: 0;
+  top: 87px;
+}
+main.messagerie .container-left {
+  width: 28%;
+  height: 325px;
+  gap: 1rem;
+}
+main.messagerie .container-left-chat {
+  width: 50%;
+  padding: 0.5rem;
+  max-height: 60vh;
+  overflow: hidden;
+  overflow-y: scroll;
+  display: flex;
+  justify-content: start;
+  align-items: start;
+}
 main.messagerie .container-main {
   width: 100%;
   box-shadow: 0 2px 3px 0 #0000001a;
@@ -272,11 +208,87 @@ main.messagerie .container-main {
   background-color: #34495e;
   display: flex;
   justify-content: start;
-  align-items: center;
+  align-items: start;
   flex-direction: column;
   padding: 0.5rem;
 }
-main.messagerie .container-main .header-chat {
+@media screen and (max-width: 980px) {
+  main.messagerie .container-left {
+    width: 40%;
+  }
+  main.messagerie .container-left-chat {
+    width: 60%;
+  }
+}
+@media screen and (max-width: 730px) {
+  main.messagerie {
+    flex-direction: column;
+    align-items: center;
+  }
+  main.messagerie .container-left, main.messagerie .container-left-chat {
+    display: none;
+  }
+  main.messagerie .container-main {
+    padding: 0.5rem;
+  }
+}
+
+.my-friends-info {
+  gap: 0.5rem;
+}
+.my-friends-info img.my-friends-img-profile {
+  width: 4.5rem;
+  height: 4.5rem;
+  border-radius: 50%;
+  border: 3px solid #34495e;
+  background-color: #34495e;
+  object-position: center;
+  object-fit: cover;
+}
+@media screen and (max-width: 420px) {
+  .my-friends-info img.my-friends-img-profile {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+}
+.my-friends-info img.my-friends-img-profile .my-friends-box-title {
+  display: flex;
+  justify-content: start;
+  flex-direction: column;
+  text-align: left;
+  max-width: 340px;
+}
+.my-friends-info img.my-friends-img-profile .my-friends-box-title p {
+  font-size: 15px;
+  color: #CCCCCc;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.my-friends-info img.my-friends-img-profile .my-friends-box-title p strong {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transition: 0.3s ease-out;
+}
+.my-friends-info img.my-friends-img-profile .my-friends-box-title p strong:hover {
+  text-decoration: underline;
+}
+
+hr {
+  margin: 5px auto 5px;
+  width: 100%;
+  height: 1px;
+  background-color: #0000001a;
+  border: none;
+  outline: none;
+}
+
+.container-main .header-chat {
   margin-top: 5px;
   width: 100%;
   padding: 1rem;
@@ -286,71 +298,114 @@ main.messagerie .container-main .header-chat {
   align-items: center;
   gap: 0.5rem;
 }
-main.messagerie .container-main .header-chat img#back-chat {
+.container-main .header-chat img#back-chat {
   width: 50px;
 }
-main.messagerie .container-main .header-chat img#img-profile {
+.container-main .header-chat img#img-profile {
   width: 55px;
   height: 55px;
   object-position: center;
   object-fit: cover;
   border-radius: 50%;
 }
-main.messagerie .container-main .header-chat strong {
+.container-main .header-chat .info {
   margin-left: 0.3rem;
 }
-main.messagerie .container-main .main-chat {
+.container-main .header-chat .info strong, .container-main .header-chat .info p {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.container-main .header-chat .info p {
+  font-size: 13;
+  color: #CCCCCc;
+}
+@media screen and (max-width: 880px) {
+  .container-main .header-chat {
+    padding: 0;
+  }
+}
+@media screen and (max-width: 390px) {
+  .container-main .header-chat {
+    gap: 0.2rem;
+  }
+  .container-main .header-chat .info {
+    margin-left: 0.2rem;
+  }
+  .container-main .header-chat img#back-chat {
+    width: 40px;
+  }
+  .container-main .header-chat img#img-profile {
+    width: 45px;
+    height: 45px;
+  }
+}
+.container-main .main-chat {
   width: 100%;
   padding: 1rem 3rem;
-  min-height: 8rem;
+  max-height: 62vh;
+  overflow: hidden;
+  overflow-y: scroll;
   display: flex;
   justify-content: start;
   flex-direction: column;
   gap: 1rem;
 }
-main.messagerie .container-main .main-chat .box-message-left,
-main.messagerie .container-main .main-chat .box-message-right {
+.container-main .main-chat .box-message-left,
+.container-main .main-chat .box-message-right {
   display: flex;
 }
-main.messagerie .container-main .main-chat .box-message-left .msg,
-main.messagerie .container-main .main-chat .box-message-right .msg {
+.container-main .main-chat .box-message-left .msg,
+.container-main .main-chat .box-message-right .msg {
   display: flex;
   justify-content: start;
   flex-direction: column;
 }
-main.messagerie .container-main .main-chat .box-message-left .msg p,
-main.messagerie .container-main .main-chat .box-message-right .msg p {
+.container-main .main-chat .box-message-left .msg p,
+.container-main .main-chat .box-message-right .msg p {
   padding: 0.5rem;
   margin-bottom: 3px;
   box-shadow: 0 2px 3px 0 #0000001a;
   border-radius: 8px;
   background-color: #0000001a;
 }
-main.messagerie .container-main .main-chat .box-message-left .msg em,
-main.messagerie .container-main .main-chat .box-message-right .msg em {
+.container-main .main-chat .box-message-left .msg em,
+.container-main .main-chat .box-message-right .msg em {
   margin-left: 5px;
   font-size: 11px;
 }
-main.messagerie .container-main .main-chat .box-message-left {
+.container-main .main-chat .box-message-left {
   justify-content: start;
 }
-main.messagerie .container-main .main-chat .box-message-left .msg em {
+.container-main .main-chat .box-message-left .msg em {
   margin-left: 5px;
 }
-main.messagerie .container-main .main-chat .box-message-right {
+.container-main .main-chat .box-message-right {
   justify-content: end;
 }
-main.messagerie .container-main .main-chat .box-message-right .msg em {
+.container-main .main-chat .box-message-right .msg em {
   margin-right: 5px;
 }
-main.messagerie .container-main form#form-chat {
+@media screen and (max-width: 880px) {
+  .container-main .main-chat {
+    padding: 1rem 1rem;
+  }
+}
+@media screen and (max-width: 430px) {
+  .container-main .main-chat {
+    padding: 1rem 0.5rem;
+  }
+}
+.container-main form#form-chat {
   width: 100%;
   display: grid;
   grid-template-columns: 1fr 8rem;
   grid-gap: 0.3rem;
   padding: 0 3rem;
 }
-main.messagerie .container-main form#form-chat textarea#chat-textarea-msg {
+.container-main form#form-chat textarea#chat-textarea-msg {
   resize: none;
   height: 3.2rem;
   outline: none;
@@ -363,15 +418,14 @@ main.messagerie .container-main form#form-chat textarea#chat-textarea-msg {
   border: 1px solid #979eaa;
   color: #f1f1f1;
 }
-main.messagerie .container-main form#form-chat textarea#chat-textarea-msg::-webkit-input-placeholder {
+.container-main form#form-chat textarea#chat-textarea-msg::-webkit-input-placeholder {
   font-size: 16px;
   color: #979eaa;
 }
-main.messagerie .container-main form#form-chat textarea#chat-textarea-msg:focus {
+.container-main form#form-chat textarea#chat-textarea-msg:focus {
   border: 1px solid #f1f1f1;
 }
-main.messagerie .container-main form#form-chat button#chat-btn-send-msg {
-  width: 8rem;
+.container-main form#form-chat button#chat-btn-send-msg {
   height: 3.2rem;
   border: none;
   outline: none;
@@ -380,11 +434,20 @@ main.messagerie .container-main form#form-chat button#chat-btn-send-msg {
   border-radius: 8px;
   background-color: #1abc9c;
 }
-main.messagerie .container-main form#form-chat button#chat-btn-send-msg:active {
+.container-main form#form-chat button#chat-btn-send-msg:active {
   transform: scale(0.98);
 }
-main.messagerie .container-main form#form-chat button#chat-btn-send-msg img {
-  width: 40px;
+@media screen and (max-width: 880px) {
+  .container-main form#form-chat {
+    grid-template-columns: 1fr 5rem;
+    padding: 0 1rem;
+  }
+}
+@media screen and (max-width: 430px) {
+  .container-main form#form-chat {
+    grid-template-columns: 1fr 3rem;
+    padding: 0 0.5rem;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
