--- a/static/chat/sass/components/_chatroom.sass
+++ b/static/chat/sass/components/_chatroom.sass
@@ -1,117 +1,137 @@
-main.messagerie
-  margin-top: 5.5rem
-  width: 100%
-  @include flex-el(space-between, null)
-  gap: 2rem
-  position: relative
-
-  .container-main
+.container-main
+  .header-chat
+    margin-top: 5px
     width: 100%
-    // height: 100%
-    box-shadow: 0 2px 3px 0 $color6
-    border-radius: 8px
+    padding: 1rem
     background-color: $color4
     @include flex-el(start, center)
-    flex-direction: column
-    padding: 0.5rem
+    gap: 0.5rem
 
-    .header-chat
-      margin-top: 5px
-      width: 100%
-      padding: 1rem
-      background-color: $color4
-      @include flex-el(start, center)
-      gap: 0.5rem
+    img#back-chat
+      width: 50px
 
+    img#img-profile
+      width: 55px
+      height: 55px
+      object-position: center
+      object-fit: cover
+      border-radius: 50%
+
+    .info
+      margin-left: 0.3rem
+      strong, p
+        display: -webkit-box
+        -webkit-line-clamp: 1
+        -webkit-box-orient: vertical
+        overflow: hidden
+        text-overflow: ellipsis
+      p
+        font-size: 13
+        color: $color9
+    @media screen and (max-width:880px)
+      padding: 0
+    @media screen and (max-width:390px)
+      gap: 0.2rem
+      .info
+        margin-left: 0.2rem
       img#back-chat
-        width: 50px
-
+        width: 40px
       img#img-profile
-        width: 55px
-        height: 55px
-        object-position: center
-        object-fit: cover
-        border-radius: 50%
+        width: 45px
+        height: 45px
 
-      strong
-        margin-left: 0.3rem
+  .main-chat
+    width: 100%
+    padding: 1rem 3rem
+    max-height: 62vh
+    overflow: hidden
+    overflow-y: scroll
+    @include flex-el(start, null)
+    flex-direction: column
+    gap: 1rem
 
-    .main-chat
-      width: 100%
-      padding: 1rem 3rem
-      min-height: 8rem
-      @include flex-el(start, null)
-      flex-direction: column
-      gap: 1rem
+    .box-message-left,
+    .box-message-right
+      display: flex
 
-      .box-message-left,
-      .box-message-right
-        display: flex
+      .msg
+        @include flex-el(start, null)
+        flex-direction: column
 
-        .msg
-          @include flex-el(start, null)
-          flex-direction: column
+        p
+          padding: 0.5rem
+          margin-bottom: 3px
+          box-shadow: 0 2px 3px 0 $color6
+          border-radius: 8px
+          background-color: $color6
 
-          p
-            padding: 0.5rem
-            margin-bottom: 3px
-            box-shadow: 0 2px 3px 0 $color6
-            border-radius: 8px
-            background-color: $color6
+        em
+          margin-left: 5px
+          font-size: 11px
 
-          em
-            margin-left: 5px
-            font-size: 11px
+    .box-message-left
+      justify-content: start
+      .msg
+        em
+          margin-left: 5px
 
-      .box-message-left
-        justify-content: start
-        .msg
-          em
-            margin-left: 5px
+    .box-message-right
+      justify-content: end
+      .msg
+        em
+          margin-right: 5px
+    @media screen and (max-width:880px)
+      padding: 1rem 1rem
+    @media screen and (max-width:430px)
+      padding: 1rem 0.5rem
 
-      .box-message-right
-        justify-content: end
-        .msg
-          em
-            margin-right: 5px
+  form#form-chat
+    width: 100%
+    display: grid
+    grid-template-columns: 1fr 8rem
+    grid-gap: 0.3rem
+    padding: 0 3rem
 
-    form#form-chat
-      width: 100%
-      display: grid
-      grid-template-columns: 1fr 8rem
-      grid-gap: 0.3rem
-      padding: 0 3rem
-
-      textarea#chat-textarea-msg
-        resize: none
-        height: 3.2rem
-        outline: none
-        border: none
-        padding: 8px
-        border-radius: 8px
-        font-family: $font1
+    textarea#chat-textarea-msg
+      resize: none
+      height: 3.2rem
+      outline: none
+      border: none
+      padding: 8px
+      border-radius: 8px
+      font-family: $font1
+      font-size: 16px
+      background-color: $color4
+      border: 1px solid $color7
+      color: $color2
+      &::-webkit-input-placeholder
         font-size: 16px
-        background-color: $color4
-        border: 1px solid $color7
-        color: $color2
-        &::-webkit-input-placeholder
-          font-size: 16px
-          color: $color7
-        &:focus
-          border: 1px solid $color2
+        color: $color7
+      &:focus
+        border: 1px solid $color2
 
-      button#chat-btn-send-msg
-        width: 8rem
-        height: 3.2rem
-        border: none
-        outline: none
-        font-family: $font1
-        cursor: pointer
-        border-radius: 8px
-        background-color: $color3
-        @extend .flex-center
-        &:active
-          transform: scale(0.98)
-
-        img
-          width: 40px
+    button#chat-btn-send-msg
+      // width: 8rem
+      height: 3.2rem
+      border: none
+      outline: none
+      font-family: $font1
+      cursor: pointer
+      border-radius: 8px
+      background-color: $color3
+      @extend .flex-center
+      &:active
+        transform: scale(0.98)
+    @media screen and (max-width:880px)
+      grid-template-columns: 1fr 5rem
+      padding: 0 1rem
+    @media screen and (max-width:430px)
+      grid-template-columns: 1fr 3rem
+      padding: 0 0.5rem
+    //   img
+    //     width: 40px
+    // @media screen and (max-width:880px)
+    //   grid-template-columns: 1fr 5rem
+    //   padding: 0 0.5rem
+    //   img
+    //     width: 40px
