--- a/static/chat/sass/main.sass
+++ b/static/chat/sass/main.sass
@@ -1,5 +1,6 @@
 @import "./utils/settings"
 @import "./utils/mixins"
-@import "../../post/sass/pages/post_list"
 @import "../../post/sass/pages/content-left-right"
+@import "./components/chat"
+@import "./components/list_chatroom"
 @import "./components/chatroom"
