--- a/templates/post/post_list.html
+++ b/templates/post/post_list.html
@@ -18,7 +18,7 @@
 {% endif %}
 {% endblock style %}
 
-{% block navbar %} {% include 'components/navbar2.html' %} {% endblock navbar %}
+{% block navbar %} {% include 'home/components/navbar2.html' %} {% endblock navbar %}
 
 
 {% block content %}
@@ -61,7 +61,7 @@
 
 
 {% comment %}
-{% block footer %} {% include 'components/footer.html' %} {% endblock footer %}
+{% block footer %} {% include 'home/components/footer.html' %} {% endblock footer %}
 {% endcomment %}
 
 {% block js %}
