--- a/templates/profiles/profiles.html
+++ b/templates/profiles/profiles.html
@@ -14,7 +14,7 @@
 {% endblock style %}
 
 <!-- Navbar -->
-{% block navbar %} {% include 'components/navbar2.html' %} {% endblock navbar %}
+{% block navbar %} {% include 'home/components/navbar2.html' %} {% endblock navbar %}
 
 {% block content %}
 <main class="main-profile">
@@ -240,7 +240,7 @@
 {% endblock content %}
 
 <!-- Footer -->
-{% block footer %} {% include 'components/footer.html' %} {% endblock footer %}
+{% block footer %} {% include 'home/components/footer.html' %} {% endblock footer %}
 
 {% block js %}
 <script type="text/javascript" src=" {% static 'components/js/index.js' %} "></script>
