--- a/templates/profiles/update.html
+++ b/templates/profiles/update.html
@@ -13,7 +13,7 @@
 {% endblock style %}
 
 <!-- Navbar -->
-{% block navbar %} {% include 'components/navbar2.html' %} {% endblock navbar %}
+{% block navbar %} {% include 'home/components/navbar2.html' %} {% endblock navbar %}
 
 {% block content %}
 <main class="main-profile-update">
@@ -46,7 +46,7 @@
 {% endblock content %}
 
 <!-- Footer -->
-{% block footer %} {% include 'components/footer.html' %} {% endblock footer %}
+{% block footer %} {% include 'home/components/footer.html' %} {% endblock footer %}
 
 {% block js %}
 <script type="text/javascript" src=" {% static 'components/js/index.js' %} "></script>
