--- a/templates/chat/components/list_chatroom.html
+++ b/templates/chat/components/list_chatroom.html
@@ -13,7 +13,7 @@
 
     <div class="my-friends-box-title">
       <strong>{{obj.first_name}} {{obj.last_name}}</strong>
-      <p>{{obj.profile.bio}}</p>
+      <!-- <p>{{obj.profile.bio}}</p> -->
       {% if obj.last_logout %}
       <P>
         {% if obj.last_logout > obj.last_login %}
