--- a/static/chat/sass/components/_chatroom.sass
+++ b/static/chat/sass/components/_chatroom.sass
@@ -43,7 +43,7 @@
   .main-chat
     width: 100%
     padding: 1rem 3rem
-    max-height: 62vh
+    height: 62vh
     overflow: hidden
     overflow-y: scroll
     @include flex-el(start, null)
