--- a/static/components/sass/components/_navigation2.sass
+++ b/static/components/sass/components/_navigation2.sass
@@ -77,7 +77,8 @@ nav ul a .start-animation
 
 a.nav-nofit
   position: relative
-  span#nav-nofit-alert
+  span#nav-nofit-alert,
+  span#nav-nofit-alert-chat
     width: 15px
     height: 15px
     padding: 8px
@@ -138,7 +139,8 @@ nav ul a:hover
     gap: 5px
 
   a.nav-nofit
-    span#nav-nofit-alert
+    span#nav-nofit-alert,
+    span#nav-nofit-alert-chat
       @include position-abs(30%, null, null, 52%, -50%, -50%)
 
 @media screen and (max-width:840px)
@@ -193,7 +195,8 @@ nav ul a:hover
     left: 0
 
   a.nav-nofit
-    span#nav-nofit-alert
+    span#nav-nofit-alert,
+    span#nav-nofit-alert-chat
       @include position-abs(17%, null, null, 52%, -50%, -50%)
 
 //   .nav-profil
