--- a/static/chat/css/style.css
+++ b/static/chat/css/style.css
@@ -20,7 +20,7 @@ a:visited {
   color: #f1f1f1;
 }
 
-.flex-center, .container-main form#form-chat button#chat-btn-send-msg, .my-friends-info {
+.flex-center, .container-main form#form-chat button#chat-btn-send-msg, a.my-friends-info-link .my-friends-info-container .my-friends-info {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -233,10 +233,20 @@ main.messagerie .container-main {
   }
 }
 
-.my-friends-info {
+a.my-friends-info-link {
+  width: 100%;
+}
+a.my-friends-info-link .my-friends-info-container {
+  width: 100%;
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+}
+a.my-friends-info-link .my-friends-info-container .my-friends-info {
+  margin-left: 0.5rem;
   gap: 0.5rem;
 }
-.my-friends-info img.my-friends-img-profile {
+a.my-friends-info-link .my-friends-info-container .my-friends-info img.my-friends-img-profile {
   width: 4.5rem;
   height: 4.5rem;
   border-radius: 50%;
@@ -246,19 +256,19 @@ main.messagerie .container-main {
   object-fit: cover;
 }
 @media screen and (max-width: 420px) {
-  .my-friends-info img.my-friends-img-profile {
+  a.my-friends-info-link .my-friends-info-container .my-friends-info img.my-friends-img-profile {
     width: 3.5rem;
     height: 3.5rem;
   }
 }
-.my-friends-info img.my-friends-img-profile .my-friends-box-title {
+a.my-friends-info-link .my-friends-info-container .my-friends-info .my-friends-box-title {
   display: flex;
   justify-content: start;
   flex-direction: column;
   text-align: left;
   max-width: 340px;
 }
-.my-friends-info img.my-friends-img-profile .my-friends-box-title p {
+a.my-friends-info-link .my-friends-info-container .my-friends-info .my-friends-box-title p {
   font-size: 15px;
   color: #CCCCCc;
   display: -webkit-box;
@@ -267,7 +277,7 @@ main.messagerie .container-main {
   overflow: hidden;
   text-overflow: ellipsis;
 }
-.my-friends-info img.my-friends-img-profile .my-friends-box-title p strong {
+a.my-friends-info-link .my-friends-info-container .my-friends-info .my-friends-box-title strong {
   display: -webkit-box;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
@@ -275,8 +285,36 @@ main.messagerie .container-main {
   text-overflow: ellipsis;
   transition: 0.3s ease-out;
 }
-.my-friends-info img.my-friends-img-profile .my-friends-box-title p strong:hover {
+a.my-friends-info-link .my-friends-info-container .my-friends-info .my-friends-box-title strong:hover {
   text-decoration: underline;
+}
+a.my-friends-info-link .my-friends-info-container .date_created_last_msg {
+  margin-right: 1rem;
+}
+a.my-friends-info-link .my-friends-info-container .date_created_last_msg p {
+  color: #979eaa;
+  font-size: 14px;
+}
+@media screen and (max-width: 480px) {
+  a.my-friends-info-link .my-friends-info-container .date_created_last_msg {
+    margin-right: 0;
+  }
+}
+
+p.msg-not-seen {
+  font-weight: bold;
+}
+
+span#msg-not-seen {
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #1abc9c;
+  position: absolute;
+  top: 50%;
+  left: 1px;
+  transform: translateX();
+  transform: translateY(-50%);
 }
 
 hr {
@@ -345,7 +383,7 @@ hr {
 .container-main .main-chat {
   width: 100%;
   padding: 1rem 3rem;
-  height: 62vh;
+  height: 60vh;
   overflow: hidden;
   overflow-y: scroll;
   display: flex;
