--- a/templates/users/actiavte.html
+++ b/templates/users/actiavte.html
@@ -1,9 +1,13 @@
 {% autoescape off %}
-Bonjour {{user.first_name}},
-Veuillez confimer votre adresse email en clickant sur le lien suivant:
 
-http://{{domain}}{% url 'activate' uidb64=uid token=token %}
+Hé, {{user.first_name}} !
 
-Merci
-{{ domain }}
+Merci de vous être inscrit sur Heroku ! Vous devez suivre ce lien pour activer votre compte :
+
+https://{{domain}}{% url 'activate' uidb64=uid token=token %}
+
+Amusez-vous et n'hésitez pas à nous faire part de vos commentaires.
+
+L'équipe Mackdin
+https://{{domain}}
 {% endautoescape %}
