Corection de bug style grid css en production et mise en forme de date de creation des messages.

--- a/static/chat/sass/components/_list_chatroom.sass
+++ b/static/chat/sass/components/_list_chatroom.sass
@@ -10,6 +10,9 @@ a.my-friends-info-link
       @extend .flex-center
       gap: 0.5rem
 
+      @media screen and (max-width: 350px)
+        gap: 5px
+
       img.my-friends-img-profile
         width: 4.5rem
         height: 4.5rem
