--- a/static/notifications/sass/components/_notifications.sass
+++ b/static/notifications/sass/components/_notifications.sass
@@ -11,6 +11,14 @@
     flex-direction: column
     gap: 0.4rem
 
+    .pas-de-notif
+      width: 100%
+      height: 100%
+      padding: 1rem
+      text-align: center
+      margin-top: 3rem
+      gap: 0.8rem
+
     .bg_seen
       // background-color: $color6
 
