--- a/templates/users/actiavte.html
+++ b/templates/users/actiavte.html
@@ -2,11 +2,11 @@
 
 Hé, {{user.first_name}} !
 
-Merci de vous être inscrit sur Heroku ! Vous devez suivre ce lien pour activer votre compte :
+Merci de votre inscription sur Mackdin ! Vous devez suivre ce lien pour activer votre compte :
 
 https://{{domain}}{% url 'activate' uidb64=uid token=token %}
 
-Amusez-vous et n'hésitez pas à nous faire part de vos commentaires.
+Amusez-vous et n'hésitez pas à nous faire part de vos commentaires :).
 
 L'équipe Mackdin
 https://{{domain}}
