--- a/static/chat/css/style.css
+++ b/static/chat/css/style.css
@@ -20,7 +20,7 @@ a:visited {
   color: #f1f1f1;
 }
 
-.flex-center, .container-main form#form-chat button#chat-btn-send-msg, a.my-friends-info-link .my-friends-info-container .my-friends-info {
+.flex-center, .container-main form#form-chat button#chat-btn-send-msg, a.my-friends-info-link .my-friends-info-container .my-friends-info, main.messagerie .container-main .pas-de-relation {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -212,6 +212,20 @@ main.messagerie .container-main {
   flex-direction: column;
   padding: 0.5rem;
 }
+main.messagerie .container-main .pas-de-relation {
+  width: 100%;
+  height: 100%;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+main.messagerie .container-main .pas-de-relation a {
+  padding: 0.5rem 1rem;
+  background-color: #1abc9c;
+  border-radius: 8px;
+}
+main.messagerie .container-main .pas-de-relation a:active {
+  transform: scale(0.98);
+}
 @media screen and (max-width: 980px) {
   main.messagerie .container-left {
     width: 40%;
@@ -232,6 +246,18 @@ main.messagerie .container-main {
     padding: 0.5rem;
   }
 }
+@media screen and (max-width: 430px) {
+  main.messagerie {
+    flex-direction: column;
+    align-items: center;
+  }
+  main.messagerie .container-left, main.messagerie .container-left-chat {
+    display: none;
+  }
+  main.messagerie .container-main {
+    padding: 5px 2px;
+  }
+}
 
 a.my-friends-info-link {
   width: 100%;
@@ -245,6 +271,11 @@ a.my-friends-info-link .my-friends-info-container {
 a.my-friends-info-link .my-friends-info-container .my-friends-info {
   margin-left: 0.5rem;
   gap: 0.5rem;
+}
+@media screen and (max-width: 350px) {
+  a.my-friends-info-link .my-friends-info-container .my-friends-info {
+    gap: 5px;
+  }
 }
 a.my-friends-info-link .my-friends-info-container .my-friends-info img.my-friends-img-profile {
   width: 4.5rem;
@@ -383,7 +414,7 @@ hr {
 .container-main .main-chat {
   width: 100%;
   padding: 1rem 3rem;
-  height: 60vh;
+  height: 56vh;
   overflow: hidden;
   overflow-y: scroll;
   display: flex;
