--- a/static/chat/sass/components/_chat.sass
+++ b/static/chat/sass/components/_chat.sass
@@ -37,13 +37,25 @@ main.messagerie
     flex-direction: column
     padding: 0.5rem
 
+    .pas-de-relation
+      width: 100%
+      height: 100%
+      @extend .flex-center
+      flex-direction: column
+      gap: 0.8rem
+
+      a
+        padding: 0.5rem 1rem
+        background-color: $color3
+        border-radius: 8px
+        &:active
+          transform: scale(0.98)
+
   @media screen and (max-width:980px)
     .container-left
       width: 40%
     .container-left-chat
       width: 60%
-    // .container-main
-    //   width: 70%
 
   @media screen and (max-width:730px)
     flex-direction: column
@@ -52,3 +64,11 @@ main.messagerie
       display: none
     .container-main
       padding: 0.5rem
+
+  @media screen and (max-width:430px)
+    flex-direction: column
+    align-items: center
+    .container-left, .container-left-chat
+      display: none
+    .container-main
+      padding: 5px 2px
