--- a/static/comments/css/style.css
+++ b/static/comments/css/style.css
@@ -53,8 +53,7 @@ a:visited {
 }
 .form-comment-list-input-container-global .form-comment-container-input {
   width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 45px;
+  display: flex;
   padding: 0.5rem;
   gap: 0.1rem;
 }
@@ -90,6 +89,7 @@ a:visited {
 }
 .form-comment-list-input-container-global .form-comment-container-input .btn-send-comment {
   padding: 0.5rem;
+  width: 45px;
   background-color: #1abc9c;
   font-family: ui-sans-serif, system-ui;
   outline: none;
