--- a/static/components/sass/utils/_global.sass
+++ b/static/components/sass/utils/_global.sass
@@ -22,3 +22,6 @@ body
 @media screen and (max-width:1149px)
   .body-container
     padding: 0 1rem 0
+@media screen and (max-width:730px)
+  .body-container
+    padding: 0 2px 0
