--- a/templates/chat/chat.html
+++ b/templates/chat/chat.html
@@ -33,9 +33,17 @@
   <div class="container-main">
     {% if page == 'list_chatroom' %}
 
+
+    {% if qs.friends.all %}
     {% for obj in qs.friends.all %}
     {% include 'chat/components/list_chatroom.html' %}
     {% endfor %}
+    {% else %}
+    <div class="pas-de-relation">
+      <p>Vous n'avez pas des amis pour discuter</p>
+      <a href="{% url 'friends:my_network' %}">Rechercher des amis</a>
+    </div>
+    {% endif %}
 
     {% else %}
 
