--- a/static/components/sass/components/_navigation2.sass
+++ b/static/components/sass/components/_navigation2.sass
@@ -98,24 +98,27 @@ nav ul a:hover
 .nav-profil-mobile
   display: none
 
-.nav-box-profil
-  height: 60px
-  width: 60px
-  @extend .flex-center
-  padding-right: 30px
+  // padding-right: 30px
 
 .nav-profil
+  margin-right: 20px
   @extend .flex-center
-  img
-    width: 50px
-    height: 50px
-    border-radius: 9999px
-    object-position: center
-    object-fit: cover
+  cursor: pointer
+  .nav-box-profil
+    height: 45px
+    width: 45px
+    @extend .flex-center
+    img
+      width: 45px
+      height: 45px
+      border-radius: 9999px
+      object-position: center
+      object-fit: cover
 
 .hamburger-nav-profil
   @extend .flex-center
-  gap: 0.5rem
+  // gap: 0.5rem
+  position: relative
 
 .hamburger
   display: none
@@ -132,6 +135,32 @@ nav ul a:hover
     transition: all 0.3s ease-in-out
     border-radius: 8px
 
+.list-box
+  // width: 200px
+  // height: 150px
+  padding: 0.5rem
+  border-radius: 8px
+  background-color: $color4
+  border: 1px solid $color2
+  @include flex-el(center, start)
+  flex-direction: column
+  gap: 1rem
+  @include position-abs(60px, 10px, null, null, null, null)
+  display: none
+  opacity: 0
+  transition: all 0.3s ease-in-out
+  a
+    padding-left: 1rem
+    text-transform: uppercase
+    @extend .flex-center
+    gap: 0.5rem
+    img
+      width: 25px
+    .text
+      transition: color 0.3s ease-in-out
+      &:hover
+        color: $color3
+
 @media screen and (max-width:1070px)
   .nav-text
     flex-direction: column
@@ -144,72 +173,139 @@ nav ul a:hover
       @include position-abs(30%, null, null, 52%, -50%, -50%)
 
 @media screen and (max-width:840px)
-  .hamburger
-    display: block
-    // visibility: visible
-    &:active
-      transform: scale(0.97)
-
-    .hamburger.active .hamburger__bar:nth-child(2)
-      opacity: 0
-    .hamburger.active .hamburger__bar:nth-child(1)
-      transform: translateY(8px) rotate(45deg)
-    .hamburger.active .hamburger__bar:nth-child(3)
-      transform: translateY(-8px) rotate(-45deg)
-
+  a.logo
+    margin-left: 5px
   .nav-menu
-    margin-right: 0
-    width: 100%
-    max-width: 1150px
-    position: fixed
-    background-color: $color1
-    opacity: 0.98
-    left: -100%
-    top: 70px
-    height: 550px
-    gap: 0
-    @include flex-el(center, center)
-    flex-direction: column
-    width: 100%
-    text-align: center
-    transition: 0.3s
-    z-index: 1000
-    box-shadow: 0 2px 3px 0 $color6
-    border-radius: 5px
+    gap: 5px
+    .nav-item
+      transform: scale(0.9)
+  .nav-profil
+    margin-right: 5px
+@media screen and (max-width:530px)
+  .nav-menu
+    // gap: 15px
+    .nav-item
+      line-height: 70px
+      .nav-img
+        width: 27px
+      .nav-text
+        .nav-text-span
+          font-size: 14px
+@media screen and (max-width:480px)
+  .nav-menu
+    gap: 25px
 
-  .nav-item
-    margin: 10px 0
-    opacity: 0.95
-    justify-content: start
-    gap: 12px
-
-  nav ul a .nav-text
-    flex-direction: rows
-    padding-bottom: 10px
-
-  nav ul a:hover
-    background: $color4
-    border-radius: 8px
-
-  .nav-menu.active
-    left: 0
-
+    .nav-item
+      .nav-img
+        width: 35px
+      .nav-text
+        .nav-text-span
+          display: none
   a.nav-nofit
     span#nav-nofit-alert,
     span#nav-nofit-alert-chat
-      @include position-abs(17%, null, null, 52%, -50%, -50%)
+      width: 20px
+      height: 20px
+      @include position-abs(34%, null, null, 55%, -50%, -50%)
+@media screen and (max-width:415px)
+  .nav-menu
+    gap: 15px
+@media screen and (max-width:365px)
+  a.logo
+    img
+      width: 30px
+  .nav-menu
+    gap: 10px
+  .nav-profil
+    .nav-box-profil
+      width: 40px
+      height: 40px
+      img
+        width: 40px
+        height: 40px
+@media screen and (max-width:330px)
+  a.logo
+    img
+      width: 28px
+  .nav-menu
+    gap: 7px
+  .nav-profil
+    .nav-box-profil
+      width: 35px
+      height: 35px
+      img
+        width: 38px
+        height: 38px
 
-//   .nav-profil
-//     height: 80px
-//     width: 80px
+.active
+  opacity: 1
+  display: flex
+//   .hamburger
+//     display: block
+//     // visibility: visible
+//     &:active
+//       transform: scale(0.97)
 
-@media screen and (max-width:390px)
-  .nav-profil-mobile
-    display: block
-  .nav-profil-ecran
-    visibility: hidden
-    display: none
-  .hamburger
-    margin-right: 1rem
-  .logo
-    margin-left: 10px
+//     .hamburger.active .hamburger__bar:nth-child(2)
+//       opacity: 0
+//     .hamburger.active .hamburger__bar:nth-child(1)
+//       transform: translateY(8px) rotate(45deg)
+//     .hamburger.active .hamburger__bar:nth-child(3)
+//       transform: translateY(-8px) rotate(-45deg)
+
+//   .nav-menu
+//     margin-right: 0
+//     width: 100%
+//     max-width: 1150px
+//     position: fixed
+//     background-color: $color1
+//     opacity: 0.98
+//     left: -100%
+//     top: 70px
+//     height: 550px
+//     gap: 0
+//     @include flex-el(center, center)
+//     flex-direction: column
+//     width: 100%
+//     text-align: center
+//     transition: 0.3s
+//     z-index: 1000
+//     box-shadow: 0 2px 3px 0 $color6
+//     border-radius: 5px
+
+//   .nav-item
+//     margin: 10px 0
+//     opacity: 0.95
+//     justify-content: start
+//     gap: 12px
+
+//   nav ul a .nav-text
+//     flex-direction: rows
+//     padding-bottom: 10px
+
+//   nav ul a:hover
+//     background: $color4
+//     border-radius: 8px
+
+//   .nav-menu.active
+//     left: 0
+
+//   a.nav-nofit
+//     span#nav-nofit-alert,
+//     span#nav-nofit-alert-chat
+//       @include position-abs(17%, null, null, 52%, -50%, -50%)
+
+// //   .nav-profil
+// //     height: 80px
+// //     width: 80px
+
+// @media screen and (max-width:390px)
+//   .nav-profil-mobile
+//     display: block
+//   .nav-profil-ecran
+//     visibility: hidden
+//     display: none
+//   .hamburger
+//     margin-right: 1rem
+//   .logo
+//     margin-left: 10px
