--- a/templates/home/components/navbar2.html
+++ b/templates/home/components/navbar2.html
@@ -115,7 +115,7 @@
       <span class="text">Profile</span>
     </a>
     {% if user.is_superuser %}
-    <a href="{% url 'admin:index' %}">
+    <a href="{% url 'admin:index' %}" target="_blank">
       <img src="{% static 'home/svg/admin.svg' %}">
       <span class="text">Administration</span>
     </a>
