--- a/static/chat/sass/components/_list_chatroom.sass
+++ b/static/chat/sass/components/_list_chatroom.sass
@@ -13,18 +13,35 @@ a.my-friends-info-link
       @media screen and (max-width: 350px)
         gap: 5px
 
-      img.my-friends-img-profile
-        width: 4.5rem
-        height: 4.5rem
-        border-radius: 50%
-        border: 3px solid $color4
-        background-color: $color4
-        object-position: center
-        object-fit: cover
+      div#link-profile-user
+        position: relative
+        img.my-friends-img-profile
+          width: 4.5rem
+          height: 4.5rem
+          border-radius: 50%
+          border: 3px solid $color4
+          background-color: $color4
+          object-position: center
+          object-fit: cover
 
-        @media screen and (max-width: 420px)
-          width: 3.5rem
-          height: 3.5rem
+          @media screen and (max-width: 420px)
+            width: 3.5rem
+            height: 3.5rem
+
+        span#point-connexion-color
+          position: absolute
+          @include position-abs(75%, null, null, 75%, -50%, -50%)
+          border-radius: 50%
+          width: 12px
+          height: 12px
+          border: 2px solid $color4
+          z-index: 1
+        span#point-connexion-color.red
+          background-color: $color8
+        span#point-connexion-color.green
+          background-color: $color3
+        span#point-connexion-color.orange
+          background-color: orange
 
       .my-friends-box-title
         @include flex-el(start, null)
