--- a/templates/chat/components/list_chatroom.html
+++ b/templates/chat/components/list_chatroom.html
@@ -7,11 +7,26 @@
 <a class="my-friends-info-link" href="{% url 'chats:chatroom' id=obj.id %}">
   <div class="my-friends-info-container">
     <div class="my-friends-info">
-      <img src="{% if obj.profile.img_profile %}
+      <div id="link-profile-user">
+        <img src="{% if obj.profile.img_profile %}
           {{obj.profile.img_profile.url}}
         {% else %}
           {% static 'home/img/default-img-profile.jpg' %}
         {% endif %}" class="my-friends-img-profile">
+
+        {% if obj.last_logout %}
+        <span id="point-connexion-color" class="{% if obj.last_logout > obj.last_login %}
+          {% if obj.last_logout|is_connected_user %}
+          orange
+          {% else %}
+          red
+          {% endif %}
+          {% else %}
+          green
+          {% endif %}">
+        </span>
+        {% endif %}
+      </div>
 
       <div class="my-friends-box-title">
         <strong>{{obj.first_name}} {{obj.last_name}}</strong>
