Couleur des notifications

--- a/static/chat/css/style.css
+++ b/static/chat/css/style.css
@@ -365,7 +365,7 @@ span#msg-not-seen {
   width: 6px;
   height: 6px;
   border-radius: 50%;
-  background-color: #1abc9c;
+  background-color: #f1f1f1;
   position: absolute;
   top: 50%;
   left: 1px;
