--- a/static/notifications/css/style.css
+++ b/static/notifications/css/style.css
@@ -63,7 +63,7 @@ a:visited {
   width: 6px;
   height: 6px;
   border-radius: 50%;
-  background-color: #1abc9c;
+  background-color: #f1f1f1;
   position: absolute;
   top: 50%;
   left: 10px;
