--- a/templates/chat/components/chatroom.html
+++ b/templates/chat/components/chatroom.html
@@ -58,7 +58,7 @@
 </div>
 
 <form action="" method="POST" id="form-chat">
-  <input type="hidden" value="{{other_user.user.id}}" id="other_user_id">
+  <input type="hidden" value="{{other_user.uid}}" id="other_user_id">
   <textarea id="chat-textarea-msg" required></textarea>
   <button type="submit" id="chat-btn-send-msg">
     <img src="{% static 'home/svg/send.svg' %}">
