--- a/templates/post/components/options.html
+++ b/templates/post/components/options.html
@@ -9,11 +9,11 @@
 
 <div id="options-container{{post.id}}" class="options-actions-container display-none">
   <ul>
-    <a href="{% url 'post:update_post' post.id  %}" class="options-item">
+    <a href="{% url 'post:update_post' post.uid  %}" class="options-item">
       <img src="{% static 'home/svg/edit.svg' %}">
       <span class="btn-edit-post" id="{{post.id}}">Modifier</span>
     </a>
-    <a href="{% url 'post:delete_post' post.id  %}" class="options-item">
+    <a href="{% url 'post:delete_post' post.uid  %}" class="options-item">
       <img src="{% static 'home/svg/delete.svg' %}">
       <span class="btn-del-post" id="{{post.id}}">Supprimer</span>
     </a>
